# shap_shapley_demo

./: .coveragerc  .dockerignore  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  README_OLD.md  TEST_SUMMARY.md  compose.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  release.yml  security-nightly.yml  todo.yml
docs/: api_reference.md  architecture.md  future_work.md  index.md  usage.md
notebooks/: shap_demo.ipynb
prompts/: README.md  ci_cd.md  project_bootstrap.md  testing.md
scripts/: onboard.py  release.py  validate_tests.py
src/: shap_backlog.py  shap_expansion.py  shap_explain.py  shap_future.py
src/shap_analytics/: __init__.py  shap_backlog.py  shap_expansion.py  shap_explain.py  shap_future.py
src/shap_analytics/.claude/: settings.local.json
src/shap_analytics/utils/: __init__.py  common.py  io_utils.py  logging_utils.py
tests/: __init__.py  conftest.py  test_shap_expansion.py  test_shap_explain.py  test_shap_future.py  test_utils.py
